made edits to fix blue highlight on mobile on touch press of cursor pointer

--- a/css/base.css
+++ b/css/base.css
@@ -288,10 +288,6 @@ main {
   line-height: 1.5;
 }
 
-.github {
-  display: block;
-}
-
 .grid {
   margin: 15em auto 7em;
   position: relative;
@@ -325,6 +321,14 @@ main {
   padding-top: 10em;
   position: relative;
   cursor: pointer;
+  /* REMOVE BLUE HIGHLIGHT WHEN TOUCH PRESS WITH CURSOR POINTER */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .product__bg {
@@ -552,19 +556,6 @@ main {
   }
 }
 
-.details__addtocart {
-  border: 0;
-  margin: auto 0 0 0;
-  background: var(--color-bg-addtocart);
-  color: var(--color-addtocart);
-  padding: 0.75em 2em;
-  font-weight: bold;
-}
-
-.details__addtocart:hover {
-  background: var(--color-btn-hover);
-}
-
 .details__close {
   position: absolute;
   top: 0;
@@ -575,6 +566,14 @@ main {
   cursor: pointer;
   font-size: 0.85em;
   color: var(--color-close);
+  /* REMOVE BLUE HIGHLIGHT WHEN TOUCH PRESS WITH CURSOR POINTER */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .dummy-menu {
@@ -605,6 +604,14 @@ main {
   top: 400px; */
   cursor: pointer;
   transform: scale(0.8, 0.8) !important;
+  /* REMOVE BLUE HIGHLIGHT WHEN TOUCH PRESS WITH CURSOR POINTER */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 @media (max-width: 900px) {
   .details__magnifier {
